--- a/pages/Audi R8 (Details - Luxury).html
+++ b/pages/Audi R8 (Details - Luxury).html
@@ -58,15 +58,22 @@
         </svg>
       </button>
     </div>    
-    <div class="absolute top-4 right-4 flex gap-4">
+   <!-- Top Right Profile and Search Icons (Fixed alignment) -->
+<div class="absolute top-4 right-4 flex gap-4 max-w-[430px] w-full pr-4 justify-end">
+    <!-- Profile Link -->
+    <a href="Profile.html">
       <svg class="w-5 h-5 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 15c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0z" />
       </svg>
+    </a>
+    
+    <!-- Search Link -->
+    <a href="SearchPage.html">
       <svg class="w-5 h-5 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
       </svg>
-    </div>
-  
+    </a>
+</div>
     <main class="flex-grow flex flex-col justify-center items-center mt-2">
 
         <!-- Car Image (slightly higher) -->
