--- a/pages/CategoryPage.html
+++ b/pages/CategoryPage.html
@@ -25,11 +25,11 @@
             </nav>
         </div>
         <div class="space-y-4">
-            <a href="#" class="flex items-center space-x-2 text-lg">
+            <a href="AboutPage.html" class="flex items-center space-x-2 text-lg">
                 <i class="fas fa-info-circle"></i>
                 <span>About</span>
             </a>
-            <a href="#" class="flex items-center space-x-2 text-lg">
+            <a href="login.html" class="flex items-center space-x-2 text-lg">
                 <i class="fas fa-sign-out-alt"></i>
                 <span>Log out</span>
             </a>
@@ -38,3 +38,4 @@
     <div class="flex-1 bg-[#7f7f7f]"></div>
 </body>
 </html>
+
