--- a/pages/login.html
+++ b/pages/login.html
@@ -66,7 +66,7 @@
 
       <!-- Links -->
       <div class="flex justify-between mt-4 text-sm font-normal text-black">
-        <a href="#">CREATE ACCOUNT</a>
+        <a href="createaccount.html">CREATE ACCOUNT</a>
         <a href="forgetpassword.html">FORGOT PASSWORD</a>
       </div>
     </div>
